# jlens-replication

./: .gitignore  README.md  RESULTS.md  RESULTS_gemma4.md  pyproject.toml  requirements.txt
configs/: gemma-3-4b.yaml  llama-3.2-3b.yaml  nemotron-nano-9b.yaml  phi-4-mini.yaml  qwen-3.6-4b.yaml
kaggle/: full_rep_gemma.ipynb  full_rep_qwen.ipynb  kaggle_run.ipynb  kaggle_run_gemma.ipynb  kernel-metadata-gemma.json  kernel-metadata.json  mrr_rescore.ipynb  rescore_qwen.ipynb
notebooks/: 01_fit_kaggle.ipynb  02_fit_colab.ipynb  03_fit_lightning.py
results/: eval_results.json  probe_readouts.json  qwen2.5-3b-eval_results.json  rescore_v2.json
results/full_rep/: probing_v1.json
results/full_rep/gemma/: causal_results.json  full_replication_summary.json  probing_results.json  shuffled_probing.json  truncation_results.json
results/full_rep/qwen/: causal_results.json  full_replication_summary.json  probing_results.json  shuffled_probing.json  truncation_results.json
results/gemma-4-e2b/: eval_results.json  probe_readouts.json
scripts/: fit_lens.py  kaggle_orchestrator.py  kaggle_run.sh  run_evals.py
